--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block main %}
-<h1 class="page-header">Lab 5 Starter Code</h1>
-<p class="lead">Use this starter template for Lab 5<br/>
-All you get are these files and mostly barebones HTML/CSS files.</p>
+<h1 class="page-header">Info3180 Lab5</h1>
+<h2>Database Login Authentication</h2>
+<p class="lead">Lab 5 starter template used to create a working login against a stored database profile.</p>
 {% endblock %}
