--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -17,7 +17,7 @@
 
           <ul class="nav navbar-nav navbar-right">
             {% if current_user.is_authenticated %}
-            <li><a href="{{ url_for('logout') }}">Logout<a><li>
+            <li class="active"><a href="{{ url_for('logout') }}">Logout<a><li>
             {% else %}
             <li class="active"><a href="{{ url_for('login') }}">Login</a></li>
             {% endif %}
